tests/errors/sig-errors.fil
extern "../../primitives/state.sv" {
    comp Wrong<G: 1, L: 1>(
        @[G, G+2] in: 32,
    ) -> (
        @[G, L] out: 32,
    );
}